fdo#60844 Remember last open folder and filter in Template Manager.

Change-Id: I81982af9a540c9966df8c0474b6527c5d08ed6f3